clusters/talos-ottawa/apps/rook-ceph/config/multisite-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-rook-ceph-rgw-object-store
  annotations:
    tailscale.com/tailnet-ip: 100.89.67.122
    # tailscale.com/tailnet-fqdn: rook-ceph-rook-ceph-rgw-object-store-ts.keiretsu.ts.net
    # tailscale.com/proxy-class: common-accept-routes
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: robbinsdale-rook-ceph-rgw-object-store
  annotations:
    tailscale.com/tailnet-ip: 100.67.182.194
    # tailscale.com/tailnet-fqdn: rook-ceph-rook-ceph-rgw-object-store-ts.keiretsu.ts.net
    # tailscale.com/proxy-class: common-accept-routes
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http
    port: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ottawa-rook-ceph-rgw-object-store
  annotations:
    tailscale.com/tailnet-ip: 100.71.64.137
    # tailscale.com/tailnet-fqdn: rook-ceph-rook-ceph-rgw-object-store-ts.keiretsu.ts.net
    # tailscale.com/proxy-class: common-accept-routes
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http
    port: 80
    protocol: TCP
