clusters/talos-ottawa/apps/rook-ceph/config/s3manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3manager
  labels:
    app: s3manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3manager
  template:
    metadata:
      labels:
        app: s3manager
    spec:
      containers:
        - name: s3manager
          image: cloudlena/s3manager:latest 
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: s3manager
  namespace: rook 
  labels:
    app: s3manager
spec:
  selector:
    app: s3manager
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bktui
  namespace: rook
  annotations:
    item.homer.rajsingh.info/name: "S3 Manager"
    item.homer.rajsingh.info/subtitle: "S3 Storage Manager"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/s3.svg"
    item.homer.rajsingh.info/tag: "infrastructure"
    item.homer.rajsingh.info/keywords: "s3, storage, manager"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "s3ui.rajsingh.info"
    - "s3ui.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: s3manager
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
